# mcfetch

./: Cargo.toml  PKGBUILD  README.md  TODO.md  install.sh
.github/workflows/: rust.yml
src/: essentials.rs  get_ascii_logo.rs  get_de_wm.rs  main.rs  memory.rs  pkg_counter.rs  terminal.rs
