[package]
name = "mcfetch"
description = "Lightweight fetching program with color options"
readme = "README.md"
repository = "https://github.com/dybdeskarphet/mcfetch"
keywords = ["system", "fetch", "linux", "unix", "ricing"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
sysinfo = "0.33.1"
uname = "0.1.1"
users = "0.11.0"
